<resources>
    <string name="app_name">Proyecto Intermodular de Desarrollo de Aplicaciones Multiplataforma</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Inventario</string>
    <string name="menu_slideshow">Lista de Clientes</string>
    <string name="menu_tareas">Lista de Tareas</string>
    <string name="title_hint">Título</string>
    <string name="date_label">Fecha</string>
    <string name="change_date">Cambiar fecha</string>
    <string name="add">Añadir</string>
    <string name="cancel">Cancelar</string>
</resources>