<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyectointermodulardedesarrollodeaplicacionesmultiplataforma.ui.tareas.CalendarFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_inventario"
        android:name="com.example.proyectointermodulardedesarrollodeaplicacionesmultiplataforma.ui.inventario.GestionInventarioFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gestion_inventario" />

    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.example.proyectointermodulardedesarrollodeaplicacionesmultiplataforma.ui.clientes.ClientesFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_clientes" />

    <fragment
        android:id="@+id/nav_tareas"
        android:name="com.example.proyectointermodulardedesarrollodeaplicacionesmultiplataforma.ui.home.HomeFragment"
        android:label="@string/menu_tareas"
        tools:layout="@layout/fragment_home" />
</navigation>
